tests/k8s_testcases/network-policy-checks-bad-path/metadata_name_has_no_value.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  # name is empty
  name:
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
